z-index issue fix!
git-svn-id: https://plugins.svn.wordpress.org/sexy-contact-form/tags@826029 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/0.9.4/includes/assets/css/main.css
+++ b/0.9.4/includes/assets/css/main.css
@@ -901,7 +901,7 @@ img.sexy_captcha {
 	width: auto !important;
 	text-indent: 0px !important;
 	background: none !important;
-	z-index: 10 !important;
+	z-index: 9999 !important;
 
 	box-shadow: inset 0 0 15px 1px rgba(253,18,8,0.78) !important;
 }
